--- a/範例.html
+++ b/範例.html
@@ -20,10 +20,12 @@
    <body id="css-zen-garden">
       <div id="page-wrapper" class="page-wrapper">
          <section id="zen-intro" class="intro">
+            <!-- header -->
             <header id="banner" role="banner">
                <h1>CSS Zen Garden</h1>
                <h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
             </header>
+            <!-- Foreword  -->
             <div id="zen-summary" class="summary" role="article">
                <p>A demonstration of what can be accomplished through <abbr title="Cascading Style Sheets">CSS</abbr>-based design. Select any style sheet from the list to load it into this page.</p>
                <p>
@@ -31,6 +33,7 @@
                   <a href="/examples/style.css" title="This page's sample CSS, the file you may modify.">css file</a>
                </p>
             </div>
+            <!-- 第一段  -->
             <div id="zen-preamble" class="preamble" role="article">
                <h3>The Road to Enlightenment</h3>
                <p>
@@ -48,6 +51,7 @@
             </div>
          </section>
          <div id="zen-supporting" class="main supporting" role="main">
+            <!-- 第二段  -->
             <div id="zen-explanation" class="explanation" role="article">
                <h3>So What is This About?</h3>
                <p>
@@ -61,6 +65,7 @@
                   contributed to the beauty of the web; we can always push it further.
                </p>
             </div>
+            <!-- 第三段  -->
             <div id="zen-participation" class="participation" role="article">
                <h3>Participation</h3>
                <p>
@@ -81,6 +86,7 @@
                   and if we choose to use it we will download it and place it on our server.
                </p>
             </div>
+            <!-- 第四段  -->
             <div id="zen-benefits" class="benefits" role="article">
                <h3>Benefits</h3>
                <p>
@@ -88,6 +94,7 @@
                   serves as equal parts inspiration for those working on the web today, learning tool for those who will be tomorrow, and gallery of future techniques we can all look forward to.
                </p>
             </div>
+            <!-- 第五段  -->
             <div id="zen-requirements" class="requirements" role="article">
                <h3>Requirements</h3>
                <p>
@@ -125,6 +132,7 @@
                <a href="https://github.com/mezzoblue/csszengarden.com" title="Fork this site on Github" class="zen-github">GH</a>
             </footer>
          </div>
+         <!-- 側邊欄 -->
          <aside id="sidebar" class="sidebar" role="complementary">
             <div id="wrapper" class="wrapper">
                <div id="design-selection" class="design-selection">
